v2.4.0beta3 "Chimera" (2017-Sep-XY)
-----------------------------------
* Split Analysis.java into three parts:
  - The minimal Analysis interface.
  - The abstract class AnalysisDispatch provides convenient methods to create and run an analysis.
  - The abstract class AbstractAnalysis holds member variables for the network, the configurations and the results.
  All analyses in de.uni_kl.cs.disco.nc.analyses extend AbstractAnalysis and implement Analysis.
 * Split ArrivalBound.java into three parts:
  - The minimal ArrivalBound interface.
  - The abstract class ArrivalBoundDispatch that applies the configured arrival boundings.
  - The abstract class AbstractArrivalBound holds member variables for the network and the configurations.
  All arrival bounds in de.uni_kl.cs.disco.nc.arrivalbounds extend AbstractArrivalBound, all but the sink-tree version also implement ArrivalBound.
* Dispatching to the right Num factory is now handled by the NumFactory interface, NumFactoryDispatch was removed.
* The NumFactory Interface provides default methods for creation of NaN as well as positive and negative infinity (Currently used by the rational implementations only). 
* Disco (min,+)-algebraic operations:
  - Moved to new package de.uni_kl.cs.disco.minplus.dnc
  - All convolutions are called via a dispatcher, MinPlusDispatch.java. 
  - Extension to manipulate MPA RTC curves with their native operations is not yet tested.

v2.4.0beta2 "Chimera" (2017-Aug-17)
-----------------------------------
* Interface and Dispatcher naming: interfaces do not have a suffix, dispatchers now suffixed with "Dispatch".
  - CurvePwAffineFactory renamed to CurvePwAffineFactoryDispatch 
  - CurvePwAffineFactoryInterface renamed to CurvePwAffineFactory
  - CurvePwAffineUtils renamed to CurvePwAffineUtilsDispatch
  - LinearSegmentFactory renamed to LinearSegmentFactoryDispatch
  - NumFactory renamed to NumFactoryDispatch
  - NumFactoryInterface renamed to NumFactory